Add debug message.

--- a/src/nvim/CMakeLists.txt
+++ b/src/nvim/CMakeLists.txt
@@ -430,6 +430,7 @@ foreach(hfile ${NEOVIM_HEADERS})
     file(RELATIVE_PATH d "${GENERATED_DIR}" "${full_d}")
   endif()
   string(REGEX REPLACE [[(.+)\.[^.]+]] [[\1]] r ${hfile})
+  message("r=${r}")
   if(NOT ${d} EQUAL ".")
     set(r "${d}/${r}")
   endif()
