added test/unit/eval/typval_spec.lua, reverted CMakeLists.txt under src/nvim Fix the errors by lint on TravisCI. Revert the filename typval_encode_c.h, and use regex to take filename body in CMakeFile.txt Comment out all expresions in typval_spec.lua, Adjust regex in CMakeFile.txt Restore the lost typval_encode.c.h Correct the function name Fix CMakeLists.txt

--- a/src/nvim/CMakeLists.txt
+++ b/src/nvim/CMakeLists.txt
@@ -180,7 +180,12 @@ foreach(sfile ${NEOVIM_SOURCES}
   set(gf2 "${GENERATED_INCLUDES_DIR}/${r}.h.generated.h")
   set(gf3 "${GENERATED_DIR}/${r}.i")
 
-  get_preproc_output(PREPROC_OUTPUT ${gf3})
+  # get_preproc_output(PREPROC_OUTPUT gf3)
+  if(MSVC)
+      set(PREPROC_OUTPUT /P /Fi${gf3})
+  else()
+      set(PREPROC_OUTPUT -E -o ${gf3})
+  endif()
 
   add_custom_command(
     OUTPUT "${gf1}" "${gf2}"
